Bug 455736 - The "Go to" account in right click menu in the ledger is the same as the account shown
Summary: The "Go to" account in right click menu in the ledger is the same as the acco...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-21 17:12 UTC by Dawid Wróbel
Modified: 2024-08-17 20:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2022-06-21 17:12:05 UTC
SUMMARY
The "Go to" account in right click menu in the ledger is the same as the account shown — it should instead be the 'Category' a transaction has been assigned to. This is how stable build works. Note that it could, in fact, be improved to show a separate "Go to" entry for *each* of the categories assigned, if more than a single was (i.e. the transaction has a split). 

STEPS TO REPRODUCE
1. Open an account in the ledger
2. Right click on a transaction

OBSERVED RESULT
Notice the "Go to" account is the same as the one being displayed

EXPECTED RESULT
The "Go to" account should be the Category assigned to this transaction, i.e. the account on other end of the transaction)

ADDITIONAL INFORMATION
Note that this could, in fact, be improved to show a separate "Go to" entry for *each* of the categories assigned, if more than a single was (i.e. the transaction has a split). Right now the stable build just shows the first one.
Comment 1 Dawid Wróbel 2022-06-22 14:41:20 UTC
This was fixed in 5.1.x by myself, reported here: https://bugs.kde.org/show_bug.cgi?id=438973
Comment 2 Jack 2022-06-22 14:47:32 UTC
So this is in master only (not 5.1) and only in the new ledger, not in the old ledger?  (I haven't compiled from master in a while.)
Comment 3 Thomas Baumgart 2022-06-22 15:58:49 UTC
Works with 'real' accounts, not so with categories. That in fact could be improved.
Comment 4 Thomas Baumgart 2022-06-26 06:07:45 UTC
Git commit 1197e86a83eb88c8241cda1a418e8584e0aa5f2a by Thomas Baumgart.
Committed on 22/06/2022 at 16:25.
Pushed by tbaumgart into branch 'master'.

Fix the "Goto account" feature for categories

M  +8    -4    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/commit/1197e86a83eb88c8241cda1a418e8584e0aa5f2a