Fix the "Goto account" feature for categories

BUG: 455736